# kosovo-nlp

./: .gitignore  EU_Corpus_Analysis_Report.docx  EU_Corpus_EDA.ipynb  EU_corpus_preprocessed.txt  EU_corpus_scores.csv  README.md  dictionary.py  final_pipeline.ipynb  main.py  pipeline.ipynb  pipeline.py  preprocess.py  pyproject.toml  test.ipynb
data/: summary.csv
eu_reports/: analyze_corpus.py  country_year_analysis.csv  downloaded_reports.csv  scrape_anchors.py  scrape_eu.py  scrape_raw.py
notebooks/: final_pipeline.ipynb  final_pipeline_contained.ipynb
old/: EU_Corpus_Clean_Score.ipynb  EU_Corpus_EDA_Final.ipynb  EU_Corpus_Preprocessing.ipynb
scraped/: albania_2021_corpus.txt  albania_2022_corpus.txt  albania_2023_corpus.txt  albania_2024_corpus.txt  albania_2025_corpus.txt  bosnia_and_herzegovina_2021_corpus.txt  bosnia_and_herzegovina_2022_corpus.txt  bosnia_and_herzegovina_2023_corpus.txt  bosnia_and_herzegovina_2024_corpus.txt  bosnia_and_herzegovina_2025_corpus.txt  corpus_clean.csv  kosovo_2021_corpus.txt  kosovo_2022_corpus.txt  kosovo_2023_corpus.txt  kosovo_2024_corpus.txt  kosovo_2025_corpus.txt  montenegro_2021_corpus.txt  montenegro_2022_corpus.txt  montenegro_2023_corpus.txt  montenegro_2024_corpus.txt  montenegro_2025_corpus.txt  north_macedonia_2021_corpus.txt  north_macedonia_2022_corpus.txt  north_macedonia_2023_corpus.txt  north_macedonia_2024_corpus.txt  north_macedonia_2025_corpus.txt  serbia_2021_corpus.txt  serbia_2022_corpus.txt  serbia_2023_corpus.txt  serbia_2024_corpus.txt  serbia_2025_corpus.txt  turkey_2021_corpus.txt  (+4 more)
(+50 files in other folders)
