[project]
name = "kosovo-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
    "wordcloud>=1.9.6",
]
